docs/1.17/get-started/01-setting-up-prisma-demo-server-GO-g001.mdx
import QueryChooser from 'components/Markdown/QueryChooser'
import Collapse from 'components/Markdown/Collapse'
import Code from 'components/Markdown/Code'

export const meta = {
  title: 'Setting up Prisma',
  position: 1,
  gettingStartedOrder: 3,
  gettingStartedTitle: 'Demo database',
  nextText: 'Great work! 👏  Move on to learn how you can change your datamodel and regenerate your Prisma client.',
  technology: 'go',
  technologyOrder: 2,
  articleGroup: 'Setting up Prisma',
}

## Goals

On this page, you will learn how to:

- Install the Prisma CLI
- Setup a Prisma Demo server with a sandboxed database
- Read and write data using the Prisma client

## Setup Prisma

To bootstrap the configuration files for your Prisma setup, create a new directory and initalize it using the `prisma init` command:

```bash copy
mkdir hello-world
cd hello-world
prisma init
```

After running `prisma init`, the Prisma CLI prompts you to select _how_ you want to deploy Prisma:

1. Select **Demo server** from the list.
1. When your browser opens, register with [Prisma Cloud](https://www.prisma.io/cloud/). This is needed because that's where the Demo server is hosted.
1. Go back to your terminal.
1. Confirm the suggested values for the following questions with **Return**:
    1. The **region** where Prisma service should be hosted
    1. The **name** for Prisma service
    1. The **stage** for Prisma service
1. Select **Prisma Go Client** to generate Prisma client for Go.

<Collapse title="Learn about the generated files">

- `prisma.yml`: The root configuration file for your Prisma setup.
- `datamodel.prisma`: Specifies the datamodel for your application that will be mapped to the database (it basically defines your database schema).

</Collapse>

## Deploy Prisma

The interactive wizard created the _minimal_ Prisma configuration based on a hosted demo database: `prisma.yml` and `datamodel.prisma`. Prisma now needs to be _deployed_ so you can [use the Prisma API](nms2):

```bash copy
prisma deploy
```

Congratulations, you have successfully deployed Prisma. You can now start using the Prisma client to talk to your database from code.

## Prepare Go application

Run the following command to create an empty Go script:

```bash copy
touch main.go
```

## Read and write data using the Prisma client

Add the following code in `main.go` and save it afterwards:

```go copy
package main

import (
	"context"
	"fmt"

	"go-script/generated/prisma"
)

func main() {

	client := prisma.New(nil)

	ctx := context.Background()

  userName := "Alice"

  newUser, err := client.createUser(prisma.UserCreateInput{
		Name: &userName,
	}).Exec(ctx)

  fmt.Println("Created new user:", newUser.name, "ID:", newUser.id)

  allUsers, err := client.users().Exec(ctx)

  fmt.Println(allUsers)
}
```

Execute the script with the following command:

```bash copy
go run main.go
```

Whenever you run the script with that command, a new user record is created in the demo database (because of the call to `createUser`).

Feel free to play around with the Prisma client API and try out some of the following operations by adding the following code snippets to the file (at the end of the `main` function) and re-executing the script:

<QueryChooser titles={["Fetch single user", "Filter user list", "Update a user's name", "Delete user"]}>

```go lineNumbers,copy
user, err := client.user(prisma.UserWhereInput{
  Id: "__USER_ID__",
}).Exec(ctx)
```

```go lineNumbers,copy
users, err := client.users(prisma.UserWhereInput{
  Name: "Alice",
}).Exec(ctx)
```

```go lineNumbers,copy
users, err := client.updatedUser(prisma.UserUpdateInput{
  Name: "Alice",
}).Exec(ctx)

 const updatedUser = await prisma
  .updateUser({
    where: { id: '__USER_ID__' },
    data: { name: 'Bob' }
  })
```

```go lineNumbers,copy
deletedUser, err := client.deleteUser(prisma.UserDeleteInput{
  Id: "__USER_ID__",
}).Exec(ctx)

 const deletedUser = await prisma
  .deleteUser({ id: '__USER_ID__' })
```

</QueryChooser>

> In some snippets, you need to replace the `__USER__ID__` placeholder with the ID of an actual user.
